--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="css/card-deck-css/css/cardstarter.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
     <title>War Cars Game</title>
@@ -17,8 +18,9 @@
         <div>Player Deck</div>
         <div>Computer Deck</div>
     </main>
+    <!-- <section id="shuffled-deck-container" class="card-container">hello</section> -->
     <section class="cardHolders"> 
-        <div id="pHandCards"></div>
+        <div id="pHandCards">hello</div>
         <div id="cHandCards"></div>
         <div id="pwar"></div>
         <div id="cwar"></div>
