--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div>Computer Deck</div>
     </main>
     <!-- <section id="shuffled-deck-container" class="card-container">hello</section> -->
-    <section class="cardHolders"> 
-        <div id="pHandCards">hello</div>
-        <div id="cHandCards"></div>
-        <div id="pwar"></div>
-        <div id="cwar"></div>
+    <section class="cardHolder"> 
+        <div class="card back" id="pHandCards"></div>
+        <div class="card back" id="cHandCards"></div>
+        <div  id="pHand"></div>
+        <div  id="cHand"></div>
     </section>
     <footer>
         <div>zero</div>
