--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>War Cars Game</title>
 </head>
 <body>
-    <h1>Do you want War?</h1>
+    <h1>Do you want War? or not</h1>
     <main>
         <div>Player Deck</div>
         <div>Computer Deck</div>
