send cards to winner deck

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <title>War Cars Game</title>
 </head>
 <body>
-    <h1>Do you want War? or not</h1>
+    <h1>Do you want War?</h1>
     <main>
         <div>Player Deck</div>
         <div>Computer Deck</div>
     </main>
-    <!-- <section id="shuffled-deck-container" class="card-container">hello</section> -->
     <section class="cardHolder"> 
         <div class="card back" id="pHandCards"></div>
         <div class="card back" id="cHandCards"></div>
@@ -28,7 +27,8 @@
     <footer>
         <div>zero</div>
         <div>zero</div>
-        <button>Lets play</button>
+       
+        <button id="war">War Button</button><button id="play">Lets play</button>
     </footer>
 </body>
 </html>
