need replay btn

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <title>War Cars Game</title>
 </head>
 <body>
+    <button id="replay">Play again</button>
     <h1>Do you want War?</h1>
     <main>
         <div>Player Deck</div>
         <div>Computer Deck</div>
     </main>
     <section class="cardHolder"> 
-        <div class="card back" id="pHandCards"></div>
-        <div class="card back" id="cHandCards"></div>
+        <!-- class="card back" -->
+        <div  id="pHandCards"></div>
+        <div  id="cHandCards"></div>
         <div  id="pHand"></div>
         <div  id="cHand"></div>
     </section>
@@ -28,7 +30,8 @@
         <div>zero</div>
         <div>zero</div>
        
-        <button id="war">War Button</button><button id="play">Lets play</button>
+        <button id="play">Lets play</button>
+        <button id="war">War Button</button>
     </footer>
 </body>
 </html>
