--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div  id="cHand"></div>
     </section>
     <footer>
-        <div>zero</div>
-        <div>zero</div>
+        <div id="pCardCount"></div>
+        <div id="cCardCount"></div>
        
         <button id="play">Lets play</button>
         <button id="war">War Button</button>
