work on read me

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <div>Computer Deck</div>
     </main>
     <section class="cardHolder"> 
-        <!-- class="card back" -->
         <div  id="pHandCards"></div>
         <div  id="cHandCards"></div>
         <div  id="pHand"></div>
@@ -31,7 +30,7 @@
         <div id="cCardCount"></div>
        
         <button id="play">Lets play</button>
-        <button id="war">War Button</button>
+        <button id="war">War = 3 Cards</button>
     </footer>
 </body>
 </html>
