READme and CSS update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>War Cars Game</title>
 </head>
 <body>
-    <button id="replay">Play again</button>
+    <button id="replay">Play again?</button>
     <h1>Do you want War?</h1>
     <main>
         <div>Player Deck</div>
@@ -30,7 +30,7 @@
         <div id="cCardCount"></div>
        
         <button id="play">Lets play</button>
-        <button id="war">War = 3 Cards</button>
+        <button id="war">WAR</button>
     </footer>
 </body>
 </html>
