css button and cards

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div>Computer Deck</div>
     </main>
     <section class="cardHolder"> 
-        <div  id="pHandCards"></div>
-        <div  id="cHandCards"></div>
+        <div class="card back" id="pHandCards"></div>
+        <div class="card back" id="cHandCards"></div>
         <div  id="pHand"></div>
         <div  id="cHand"></div>
     </section>
