--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>War Cars Game</title>
 </head>
 <body>
-    <button id="replay">Play again?</button>
+    <button id="replay">Again?</button>
     <h1>Do you want War?</h1>
     <main>
         <div>Player Deck</div>
