background color change plus title edit

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
-    <title>War Cars Game</title>
+    <title>War Card Game</title>
 </head>
 <body>
     <button id="replay">Again?</button>
     <h1>Do you want War?</h1>
     <main>
-        <div>Player Deck</div>
+        <div>Your Deck</div>
         <div>Computer Deck</div>
     </main>
     <section class="cardHolder"> 
