--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <button id="replay">Again?</button>
-    <h1>Do you want War?</h1>
+    <h1>Ready for War?</h1>
     <main>
         <div>Your Deck</div>
         <div>Computer Deck</div>
